--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,3 +6,9 @@ body {
     padding: 20px;
     border-radius: 10px;
 }
+
+@media only screen and (min-width: 993px) {
+    .container{
+        width: 960px;
+    }
+}
