--- a/templates/users.html
+++ b/templates/users.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1>All Users</h1>
+        <h1 class="text-center mb-3">All Users</h1>
         <table class="table table-striped mb-3">
             <thead>
                 <tr>
@@ -18,6 +18,7 @@
                     <th scope="col">Name</th>
                     <th scope="col">Email</th>
                     <th scope="col">Created At</th>
+                    <th scope="col">Actions</th>
                 </tr>
             </thead>
             <tbody>
@@ -27,6 +28,7 @@
                     <td>{{user.fname}} {{user.lname}}</td>
                     <td>{{user.email}}</td>
                     <td>{{user.created_at}}</td>
+                    <td><a href="/user/{{user.id}}">Show</a> | <a href="#">Edit</a> | <a href="#">Delete</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
