--- a/templates/new.html
+++ b/templates/new.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-3">Add User</h1>
+        <div class="wrapper d-flex justify-content-between align-items-center">
+            <h1 class="mb-3">Add User</h1>
+            <a href="/users" class="btn btn-primary">Home</a>
+        </div>
         <form action="/user/create" method="post">
             <div class="mb-3">
                 <label for="fname" class="form-label">First Name:</label>
