--- a/templates/user.html
+++ b/templates/user.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="mb-3">User {{user.id}}</h1>
+        <div class="wrapper d-flex justify-content-between align-items-center">
+            <h1 class="mb-3">User {{user.id}}</h1>
+            <a href="/users" class="btn btn-primary">Home</a>
+        </div>
         <p>Name: {{user.fname}} {{user.lname}}</p>
         <p>Email: {{user.email}}</p>
         <p>Created On: {{user.created_at.strftime('%B %d, %Y') }}</p>
