--- a/templates/users.html
+++ b/templates/users.html
@@ -28,7 +28,7 @@
                     <td>{{user.fname}} {{user.lname}}</td>
                     <td>{{user.email}}</td>
                     <td>{{user.created_at}}</td>
-                    <td><a href="/user/{{user.id}}">Show</a> | <a href="#">Edit</a> | <a href="#">Delete</a></td>
+                    <td><a href="/user/{{user.id}}">Show</a> | <a href="/user/{{user.id}}/edit">Edit</a> | <a href="/user/{{user.id}}/delete">Delete</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
